tests/arch/mips/error/compiler/test_mips_error_compiler_016.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
 	.align 2
    example:	.ascii hello world"

